violating_resources/pod-security-policy/read-only-root-filesystem/samples/psp-readonlyrootfilesystem/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-readonlyrootfilesystem-disallowed
  name: psp-readonlyrootfilesystem-disallowed-ephemeral
  labels:
    app: nginx-readonlyrootfilesystem
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
    securityContext:
      readOnlyRootFilesystem: false
