violating_resources/pod-security-policy/read-only-root-filesystem/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata: # kpt-merge: /read-only-root-filesystem
  name: read-only-root-filesystem
tests:
- name:
  template: template.yaml
  constraint: samples/psp-readonlyrootfilesystem/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/psp-readonlyrootfilesystem/example_disallowed.yaml
    assertions:
    - violations: yes
  - name: example-allowed
    object: samples/psp-readonlyrootfilesystem/example_allowed.yaml
    assertions:
    - violations: no
  - name: disallowed-ephemeral
    object: samples/psp-readonlyrootfilesystem/disallowed_ephemeral.yaml
    assertions:
    - violations: yes
